<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneAuth"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:inputType="number"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_otp"
        android:background="#185173"
        android:textColor="#ffffff"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:clickable="false"
        android:inputType="number"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_sign_in"
        android:background="@color/black"
        android:textColor="#ffffff"
        android:layout_margin="20dp"/>

</LinearLayout>