<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gcf.motoriders.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.gcf.motoriders.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_quick"
        android:name="com.gcf.motoriders.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_track"
        android:name="com.gcf.motoriders.ui.mid.Mid"
        android:label="@string/title_notifications"
        tools:layout="@layout/mid_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.gcf.motoriders.ui.last.LastFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/last_fragment" />
</navigation>